		that threads should lock on the random number generator directly.  This
		also affects RandomSequence, which is now locking on the generator rather
		than on the schedule when "shouldSynchronize" is true.  We have updated
		RandomSequence's code, plus documentation in RandomSequence,
		ParallelSequence, and the manual.  NOTE that this does NOT affect the rule
		that GUI objects should lock on state.schedule in order to synchronize
		with the underlying model thread.  That's a different issue.  Thanks to
		Mark Coletti <mcoletti@gmu.edu>
	Modifications to Console, SimpleController, and SimState which force the internal 
		seed to be 32 bits.  MersenneTwisterFast only uses 32 bits of its seed, 
		but we were allowing the user to specify and display 64 bits.  This was 
		confusing because the user would see 64-bit numbers in the Console but if 
		he tried to *set* those same values in the Console he'd get a message 
		indicating that the seed would be truncated.  This was also error-prone 
		because users would see a different seed (64 bits) than was actually being 
		used (truncated 32 bits).  Thanks to Joey Harrison <jharri1@gmu.edu>
	HistogramGenerator and ScatterPlotGenerator were incorrectly changing update()
		from protected to public.  It's supposed to be protected and not called
		directly.  Instead, call update(..,...), or better, call
		updateChartLater(...) or updateChartWithin(...,...).
	ChartGenerator.createFrame() now produces frames which by default are set to
		hide, not dispose, when closed.  This makes it consistent with displays.
		Correspondingly, ChartingPropertyInspector modifies the default to
		dispose when closed, since inspectors are intended to dispose themselves
		when they are closed, unlike displays.  Thanks to Ahmed Elmolla
		<aelmolla@gmu.edu>
	Made Display3D.setRasterizationMode(...) and Display3D.setCullingMode(...) public.
	Reindented
	Added the ability to force precision in Display2D.